# barrel

./: .gitignore  .gitmodules  AXEL.md  Cargo.toml  README.md  barrel.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
agents/: index.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: agent.rs  layout.rs  mod.rs  server.rs  session.rs  skill.rs
crates/core/: Cargo.toml
crates/core/src/: claude.rs  config.rs  git.rs  lib.rs
crates/core/src/drivers/: antigravity.rs  claude.rs  codex.rs  mod.rs  opencode.rs
crates/core/src/hooks/: mod.rs  settings.rs
crates/core/src/server/: events.rs  logger.rs  mod.rs  routes.rs
crates/core/src/tmux/: commands.rs  mod.rs  session.rs
scripts/: install.sh
