[workspace.package]
version = "0.4.0"
edition = "2024"
description = "Axel is a tmux workspace launcher"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ludovic/barrel"
keywords = ["tmux", "workspace", "terminal", "cli"]
categories = ["command-line-utilities"]

[workspace]
members = ["crates/cli", "crates/core"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
] }
colored = { version = "2.1", default-features = false }
dialoguer = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9", default-features = false }
indexmap = { version = "2.7", features = ["serde"] }
dirs = "6.0"

# Internal crates
axel-core = { path = "crates/core" }
