[package]
name = "axel-core"
description = "Core library for axel workspace launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
colored = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
dirs = { workspace = true }
